--- a/hw16_classic_web/src/main/resources/static/css/table.css
+++ b/hw16_classic_web/src/main/resources/static/css/table.css
@@ -37,7 +37,6 @@ table.paleblue thead td:first-child {
 
 table.paleblue thead th,
 table.paleblue thead td {
-    background: #FCFCFC url(../img/header-bg.png) left bottom repeat-x;
     border-bottom: 1px solid #DDD;
     padding: 2px 5px;
     font-size: 11px;
@@ -50,17 +49,6 @@ table.paleblue thead th > a:visited {
     color: #666;
 }
 
-table.paleblue thead th.orderable > a {
-    padding-right: 20px;
-    background: url(../img/arrow-inactive-up.png) right center no-repeat;
-}
-table.paleblue thead th.orderable.asc > a {
-    background-image: url(../img/arrow-active-up.png);
-}
-table.paleblue thead th.orderable.desc > a {
-    background-image: url(../img/arrow-active-down.png);
-}
-
 table.paleblue tr.odd {
     background-color: #EDF3FE;
 }
@@ -70,7 +58,6 @@ table.paleblue tr.even {
 }
 
 table.paleblue + ul.pagination {
-    background: white url(../img/pagination-bg.gif) left 180% repeat-x;
     overflow: auto;
     margin: 0;
     padding: 10px;
@@ -104,24 +91,15 @@ table.paleblue > tbody > tr > td > span.false {
     width: 10px;
 }
 
-table.paleblue > tbody > tr > td > .missing {
-    background: transparent url(../img/missing.png) right center no-repeat;
-    color: #717171;
-    padding-right: 20px;
-}
-
 table.paleblue > tbody > tr > td > .missing:hover {
     color: #333;
 }
 
-table.paleblue > tbody > tr > td > span.true {
-    background-image: url(../img/true.gif);
-}
-
-table.paleblue > tbody > tr > td > span.false {
-    background-image: url(../img/false.gif);
-}
-
 div.table-container {
     display: inline-block;
+}
+
+table.paleblue > tbody > tr > td.header {
+    font-weight: bold;
+    color: #666;
 }
