--- a/hw16_classic_web/src/main/resources/templates/books.html
+++ b/hw16_classic_web/src/main/resources/templates/books.html
@@ -7,7 +7,7 @@
     <link href="../static/css/table.css" th:href="@{/css/table.css}" rel="stylesheet"/>
 </head>
 <body>
-<div th:replace="~{menu::menu}">Menu</div>>
+<div th:replace="~{menu::menu}">Menu</div>
 <header><h3>Список книг</h3></header>
 <div class="actions">
     <a class="action" href="add_book.html" th:href="@{/book/new}">Добавить новую</a>
