Add add_author.html and mappings in AuthorController Add tests to AuthorControllerTest

--- a/hw16_classic_web/src/main/resources/templates/add_book.html
+++ b/hw16_classic_web/src/main/resources/templates/add_book.html
@@ -9,7 +9,7 @@
 <body>
 <div th:replace="~{menu::menu}">Menu</div>
 <header>
-    <h3 th:text="${'Добавление информации о книге'}">Добавление информации о книге</h3>
+    <h3>Добавление информации о книге</h3>
 </header>
 <form action="#" th:action="@{/book/add}" method="post">
     <table class="paleblue">
