--- a/hw16_classic_web/src/main/resources/templates/genres.html
+++ b/hw16_classic_web/src/main/resources/templates/genres.html
@@ -9,6 +9,9 @@
 <body>
 <div th:replace="~{menu::menu}">Menu</div>
 <header><h3>Список жанров</h3></header>
+<div class="actions">
+    <a class="action" href="add_genre.html" th:href="@{/genre/add}">Добавить новый</a>
+</div>
 <table class="paleblue">
     <thead>
     <tr>
